<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WakeAppCallv1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_login2">Login2</string>
    <string name="title_activity_register_activity2">RegisterActivity2</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="textButton1">Wake me up!</string>
    <string name="textButton2">Wake someone up!</string>
    <string name="addFriendsButton1">Search by mail</string>
    <string name="addFriendsButton2">Add from Facebook</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="add_friend_button_text">Add new friends!</string>
    <string name="searchFriendMail">Friend e-mail</string>
    <string name="title_activity_friends">Friends</string>
    <string name="action_search_short">Search</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_sign_in_Facebook">Sign in with Facebook</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login">Login error</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_receiving_call">Receiving Call</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_alarm_list">Alarms</string>
    <string name="title_alarm_detail">Alarm Detail</string>
    <string name="title_activity_create_alarm">CreateAlarm</string>
    <string name="title_activity_alarm_choice">AlarmChoiceActivity</string>
    <string name="app_id">536632193113487</string> <!-- for the Facebook SDK -->

    <string name="title_friend_list">Friends</string>
    <string name="title_friend_detail">Friend Detail</string>
    <string name="title_activity_facebook_friends">FacebookFriendsActivity</string>
    <string name="title_activity_friend_picker_application">FriendPickerApplication</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="need_perms_alert_text">Wake-App Call needs additional persmissions</string>
    <string name="need_perms_alert_button_ok">Okay</string>
    <string name="need_perms_alert_button_quit">Cancel</string>
    <string name="title_activity_someone_special">SomeoneSpecialActivity</string>
    <string name="title_activity_friend_special_adapter">FriendSpecialAdapter</string>
    <string name="ok">Ok</string>
    <string name="share_confirm">Let more people know about this?</string>
    <string name="share">Share</string>
    <string name="cancel">No</string>
    <string name="settings_share_text">I need someone to wake me up on time! If you want to help, download  Wake-App Call! (Coming soon!)</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">Ok</string>
    <string name="title_activity_alarm_receiver">AlarmReceiverActivity</string>

</resources>
