<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wakeappcallv1.app.RegisterActivity2"
    android:background="@color/abc_search_url_text_pressed"
    >



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile"
                android:contentDescription="profile_image" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_gravity="bottom"
                android:ems="10"
                android:maxLines="1"
                android:id="@+id/editText"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/common_signin_btn_dark_text_focused"/>
            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:layout_gravity="bottom"
                android:background="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/sym_action_email" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editText7"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_menu_call"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_no"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_weight="1" />
            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_lock_lock"
                android:contentDescription="password_lock" />

            <EditText
                android:layout_width="0pt"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:maxLines="1"
                android:id="@+id/editText3"
                android:hint="@string/password"
                android:layout_weight="1" />
            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/birthday"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:maxLines="1"
                android:id="@+id/editText4"
                android:layout_weight="1"
                android:hint="@string/date_of_birth"/>
            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="@null"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/flag2"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText5"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="Country"/>
            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="@null"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/city2"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="@string/city"/>
            <ImageButton
                android:layout_width="7pt"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="@null"/>

        </LinearLayout>

</LinearLayout>